html css header

--- a/index.html
+++ b/index.html
@@ -6,5 +6,79 @@
 		<link rel="stylesheet" href="./css/style.css" />
 		<title>Les Petits Plats</title>
 	</head>
-	<body></body>
+	<body>
+		<header class="header">
+			<img
+				class="header__logo"
+				src="./assets/images/logo.svg"
+				alt="Les Petits Plats"
+			/>
+			<div class="header__content">
+        <h1 class="header__title">
+          Cherchez parmi plus de 1500 recettes<br />
+          du quotidien, simples et délicieuses
+        </h1>
+        <form class="header__form" action="#">
+          <label class="search-label" for="search"
+            >Rechercher une recette, un ingredient, ...</label
+          >
+          <input
+            type="text"
+            name="search"
+            id="search"
+            class="search"
+            placeholder="Rechercher une recette, un ingredient, ..."
+          />
+          <button type="submit">
+            <img src="./assets/images/search.svg" alt="Search" />
+          </button>
+        </form>
+      </div>
+		</header>
+    <main>
+      <div class="recipes-list">
+        <article class="card">
+          <div class="ratio-box">
+            <img src="./assets/recipes/Recette01.jpg" alt="#">
+          </div>
+          <div class="recipe">
+            <h2>Recipe 1</h2>
+          </div>
+        </article>
+        <article class="card">
+          <div class="ratio-box">
+            <img src="./assets/recipes/Recette01.jpg" alt="#">
+          </div>
+          <div class="recipe">
+            <h2>Recipe 1</h2>
+          </div>
+        </article>
+        <article class="card">
+          <div class="ratio-box">
+            <img src="./assets/recipes/Recette01.jpg" alt="#">
+          </div>
+          <div class="recipe">
+            <h2>Recipe 1</h2>
+          </div>
+        </article>
+        <article class="card">
+          <div class="ratio-box">
+            <img src="./assets/recipes/Recette01.jpg" alt="#">
+          </div>
+          <div class="recipe">
+            <h2>Recipe 1</h2>
+          </div>
+        </article>
+        <article class="card">
+          <div class="ratio-box">
+            <img src="./assets/recipes/Recette01.jpg" alt="#">
+          </div>
+          <div class="recipe">
+            <h2>Recipe 1</h2>
+          </div>
+        </article>
+        
+      </div>
+    </main>
+	</body>
 </html>
