--- a/index.html
+++ b/index.html
@@ -14,71 +14,68 @@
 				alt="Les Petits Plats"
 			/>
 			<div class="header__content">
-        <h1 class="header__title">
-          Cherchez parmi plus de 1500 recettes<br />
-          du quotidien, simples et délicieuses
-        </h1>
-        <form class="header__form" action="#">
-          <label class="search-label" for="search"
-            >Rechercher une recette, un ingredient, ...</label
-          >
-          <input
-            type="text"
-            name="search"
-            id="search"
-            class="search"
-            placeholder="Rechercher une recette, un ingredient, ..."
-          />
-          <button type="submit">
-            <img src="./assets/images/search.svg" alt="Search" />
-          </button>
-        </form>
-      </div>
+				<h1 class="header__title">
+					Cherchez parmi plus de 1500 recettes<br />
+					du quotidien, simples et délicieuses
+				</h1>
+				<form class="header__form" action="#">
+					<label class="search-label" for="search"
+						>Rechercher une recette, un ingrédient, ...</label
+					>
+					<input
+						type="text"
+						name="search"
+						id="search"
+						class="search"
+						placeholder="Rechercher une recette, un ingredient, ..."
+					/>
+					<button type="submit">
+						<img src="./assets/images/search.svg" alt="Search" />
+					</button>
+				</form>
+			</div>
 		</header>
-    <main>
-      <div class="recipes-list">
-        <article class="card">
-          <div class="ratio-box">
-            <img src="./assets/recipes/Recette01.jpg" alt="#">
-          </div>
-          <div class="recipe">
-            <h2>Recipe 1</h2>
-          </div>
-        </article>
-        <article class="card">
-          <div class="ratio-box">
-            <img src="./assets/recipes/Recette01.jpg" alt="#">
-          </div>
-          <div class="recipe">
-            <h2>Recipe 1</h2>
-          </div>
-        </article>
-        <article class="card">
-          <div class="ratio-box">
-            <img src="./assets/recipes/Recette01.jpg" alt="#">
-          </div>
-          <div class="recipe">
-            <h2>Recipe 1</h2>
-          </div>
-        </article>
-        <article class="card">
-          <div class="ratio-box">
-            <img src="./assets/recipes/Recette01.jpg" alt="#">
-          </div>
-          <div class="recipe">
-            <h2>Recipe 1</h2>
-          </div>
-        </article>
-        <article class="card">
-          <div class="ratio-box">
-            <img src="./assets/recipes/Recette01.jpg" alt="#">
-          </div>
-          <div class="recipe">
-            <h2>Recipe 1</h2>
-          </div>
-        </article>
+		<main>
+			<div class="recipes-list">
+				<article class="card">
+					<div class="card__image">
+						<img src="./assets/recipes/Recette01.jpg" alt="#" />
+					</div>
+					<div class="card__content">
+						<h2 class="card__title">Titre de la recette</h2>
+            <h3 class="card__subtitle">Recette</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sit eos est illum aspernatur, mollitia totam, sint possimus ut amet fugit vero maiores dolores corrupti in voluptatibus eveniet quisquam nam!</p>
+            <h3 class="card__subtitle">Ingrédients</h3>
+            <div class="ingredients-container">
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+              <div class="ingredient">
+                <span class="ingredient__name">Sucre</span>
+                <span class="ingredient__value">1 cuilliere a soupe</span>
+              </div>
+            </div>
+					</div>
+				</article>
         
-      </div>
-    </main>
+			</div>
+		</main>
 	</body>
 </html>
