project oop structure

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/e4296c345c.js" crossorigin="anonymous"></script>
+		<script
+			src="https://kit.fontawesome.com/e4296c345c.js"
+			crossorigin="anonymous"
+		></script>
 		<link rel="stylesheet" href="./css/style.css" />
-		<script src="js/dropdowns.js" defer></script>
+		<script src="../src/dropdowns.js" defer></script>
+		<script type="module" src="../src/pages/index.js" defer></script>
 		<title>Les Petits Plats</title>
 	</head>
 	<body>
@@ -73,22 +77,45 @@
 							</svg>
 						</button>
 						<div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="10" cy="10" r="9.5" stroke="white"/>
-                  <line x1="18.3536" y1="18.6464" x2="27.3536" y2="27.6464" stroke="white"/>
-                </svg>
-                <input type="text">
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item"><a href="#">Jus de citron</a></li>
-                <li class="list-item"><a href="#">Tomate</a></li>
-                <li class="list-item"><a href="#">Poulet</a></li>
-              </ul>
-            </div>
+							<form class="select" action="#">
+								<svg
+									width="28"
+									height="28"
+									viewBox="0 0 28 28"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<circle
+										cx="10"
+										cy="10"
+										r="9.5"
+										stroke="white"
+									/>
+									<line
+										x1="18.3536"
+										y1="18.6464"
+										x2="27.3536"
+										y2="27.6464"
+										stroke="white"
+									/>
+								</svg>
+								<input type="text" />
+							</form>
+							<ul class="added-items"></ul>
+							<ul class="list">
+								<li class="list-item">
+									<a href="#">Jus de citron</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Tomate</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Poulet</a>
+								</li>
+							</ul>
+						</div>
 					</div>
-          <div class="dropdown" data-dropdown>
+					<div class="dropdown" data-dropdown>
 						<button class="link" data-dropdown-button>
 							<span>Appareils</span>
 							<svg
@@ -106,22 +133,45 @@
 							</svg>
 						</button>
 						<div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="10" cy="10" r="9.5" stroke="white"/>
-                  <line x1="18.3536" y1="18.6464" x2="27.3536" y2="27.6464" stroke="white"/>
-                </svg>
-                <input type="text">
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item"><a href="#">Jus de citron</a></li>
-                <li class="list-item"><a href="#">Tomate</a></li>
-                <li class="list-item"><a href="#">Poulet</a></li>
-              </ul>
-            </div>
+							<form class="select" action="#">
+								<svg
+									width="28"
+									height="28"
+									viewBox="0 0 28 28"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<circle
+										cx="10"
+										cy="10"
+										r="9.5"
+										stroke="white"
+									/>
+									<line
+										x1="18.3536"
+										y1="18.6464"
+										x2="27.3536"
+										y2="27.6464"
+										stroke="white"
+									/>
+								</svg>
+								<input type="text" />
+							</form>
+							<ul class="added-items"></ul>
+							<ul class="list">
+								<li class="list-item">
+									<a href="#">Jus de citron</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Tomate</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Poulet</a>
+								</li>
+							</ul>
+						</div>
 					</div>
-          <div class="dropdown" data-dropdown>
+					<div class="dropdown" data-dropdown>
 						<button class="link" data-dropdown-button>
 							<span>Ustensiles</span>
 							<svg
@@ -139,23 +189,46 @@
 							</svg>
 						</button>
 						<div class="dropdown-menu">
-              <form class="select" action="#">
-                <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="10" cy="10" r="9.5" stroke="white"/>
-                  <line x1="18.3536" y1="18.6464" x2="27.3536" y2="27.6464" stroke="white"/>
-                </svg>
-                <input type="text">
-              </form>
-              <ul class="added-items"></ul>
-              <ul class="list">
-                <li class="list-item"><a href="#">Jus de citron</a></li>
-                <li class="list-item"><a href="#">Tomate</a></li>
-                <li class="list-item"><a href="#">Poulet</a></li>
-              </ul>
-            </div>
+							<form class="select" action="#">
+								<svg
+									width="28"
+									height="28"
+									viewBox="0 0 28 28"
+									fill="none"
+									xmlns="http://www.w3.org/2000/svg"
+								>
+									<circle
+										cx="10"
+										cy="10"
+										r="9.5"
+										stroke="white"
+									/>
+									<line
+										x1="18.3536"
+										y1="18.6464"
+										x2="27.3536"
+										y2="27.6464"
+										stroke="white"
+									/>
+								</svg>
+								<input type="text" />
+							</form>
+							<ul class="added-items"></ul>
+							<ul class="list">
+								<li class="list-item">
+									<a href="#">Jus de citron</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Tomate</a>
+								</li>
+								<li class="list-item">
+									<a href="#">Poulet</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
-        <span class="total-recipes">50 recettes</span>
+				<span class="total-recipes">50 recettes</span>
 			</section>
 			<section class="recipes-section">
 				<article class="card">
